# 6502_Simulator

./: Cargo.toml  README.md
src/: cpu.rs  instructions.rs  main.rs  memory.rs  register.rs  tests.rs
