[package]
name = "simulator6502"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"

[profile.dev]
opt-level = 3

[profile.release]
overflow-checks = false
opt-level = "s"
lto = true
codegen-units = 1